feat(GetUserByUUID): Added a new service for integration testing as well and corresponding request and response objects

--- a/backend/microservices/user-service/pom.xml
+++ b/backend/microservices/user-service/pom.xml
@@ -15,7 +15,10 @@
 	<description>The user service for the Adventure-IT application</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -47,6 +50,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
 					<source>11</source>
 					<target>11</target>
