--- a/backend/microservices/adventure-service/pom.xml
+++ b/backend/microservices/adventure-service/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
+            <artifactId>user-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 	<build>
