feat(notifications): implemented sendemail in notifications as well as config as well as request object

--- a/backend/microservices/notification-service/src/main/resources/application.properties
+++ b/backend/microservices/notification-service/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port = 9004
 spring.application.name = notification-microservice
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = thesmartpointers@gmail.com
+spring.mail.password = TSPAAKSS21
