feat(retrieveNotification): implemented retrieve notification service

--- a/backend/microservices/notification-service/src/main/resources/application.properties
+++ b/backend/microservices/notification-service/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port = 9004
 spring.application.name = notification-microservice
+
+spring.datasource.url=jdbc:postgresql://localhost:5000/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.username = thesmartpointers@gmail.com
@@ -14,3 +19,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
