feat(service-registry): added service registry & registered all microservices

--- a/backend/microservices/location-service/src/main/resources/application.yml
+++ b/backend/microservices/location-service/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 9999
+  port: 9006
 
 spring:
   application:
-    name: MAIN-CONTROLLER
+    name: LOCATION-SERVICE
 
 eureka:
   client:
