--- a/backend/microservices/user-service/src/main/resources/application.yml
+++ b/backend/microservices/user-service/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 9999
+  port: 9002
 
 spring:
   application:
-    name: MAIN-CONTROLLER
+    name: USER-SERVICE
 
 eureka:
   client:
