--- a/backend/service-registry/pom.xml
+++ b/backend/service-registry/pom.xml
@@ -6,41 +6,29 @@
 		<groupId>com.adventure-it</groupId>
 		<artifactId>adventure-backend</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath> <!-- lookup parent locally -->
+		<relativePath>../pom.xml</relativePath> <!-- lookup parent locally -->
 	</parent>
-	<artifactId>media-service</artifactId>
+
+	<groupId>com.adventure-it</groupId>
+	<artifactId>service-registry</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>media-service</name>
-	<description>The media service for adventure-it</description>
+	<name>service-registry</name>
+	<description>The service registry for the Adventure-IT application</description>
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.3</spring-cloud.version>
-
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<version>2.2.5.RELEASE</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-			<version>2.2.5.RELEASE</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
