--- a/backend/microservices/adventure-service/src/main/resources/application.yml
+++ b/backend/microservices/adventure-service/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 9999
+  port: 9001
 
 spring:
   application:
-    name: MAIN-CONTROLLER
+    name: ADVENTURE-SERVICE
 
 eureka:
   client:
@@ -13,3 +13,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
     instance:
       hostname: localhost
+
