--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -22,6 +22,7 @@
         <module>microservices/notification-service</module>
         <module>microservices/sharing-service</module>
         <module>microservices/user-service</module>
+        <module>service-registry</module>
         <module>main-controller</module>
     </modules>
     <properties>
