--- a/backend/microservices/budget-service/pom.xml
+++ b/backend/microservices/budget-service/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.adventure-it</groupId>
+			<artifactId>adventure-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
