--- a/flutter_testing/pubspec.yaml
+++ b/flutter_testing/pubspec.yaml
@@ -27,6 +27,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: ^0.12.0
+  json_annotation: ^4.0.0
   flutter:
     sdk: flutter
 
@@ -45,6 +47,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
