--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: action/checkout@v2
         with:
-          ref: develop
+          ref: development
       -name: Set Up JDK 11
       uses: actions/setup-java@v2
       with:
