--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
       - uses: action/checkout@v2
         with:
-          ref: development
-      -name: Set Up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
+          ref: 'development'
+      - name: Set Up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
       - name: Build with Maven
         run: mvn --batch-mode test
