--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Backend - Java CI with Maven
+name: Backend - Java CI with Maven (TESTING sprint_Three_MainController only)
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: action/checkout@v2
         with:
-          ref: 'development'
+          ref: 'sprint_Three_MainController'
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
