--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: action/checkout@v2
         with:
-          ref: 'origin/sprint_Three_MainController'
+          ref: sprint_Three_MainController
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
