--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,9 @@ jobs:
       - name: Checkout sprint_Three_MicroController
         uses: action/checkout@v2
         with:
+          repository: COS301-SE-2021/Adventure-IT
           ref: sprint_Three_MicroController
-          token: ${{secrets.ACTION_SECRET}}
+          token: ${{secrets.GitHub_PAT}}
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
