--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout sprint_Three_MicroController
+      - name: Checkout Project
         uses: action/checkout@v2
-        with:
-          repository: COS301-SE-2021/Adventure-IT
-          ref: sprint_Three_MicroController
-          token: ${{secrets.GitHub_PAT}}
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
