--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,9 @@ jobs:
     
     steps:
       - name: Checkout Project
-        uses: action/checkout@v2.3.4
+        uses: action/checkout@v2
+        with: 
+          token: ${{ secrets.GitHub_PAT }}
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
