--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Project
         uses: action/checkout@v2
         with: 
-          token: ${{ secrets.GitHub_PAT }}
+          token: ${{ secrets.ACTIONS_SECRET }}
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
