--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
       - name: Checkout Project
         uses: action/checkout@v2
         with: 
-          repo-token: ${{ secrets.GITHUB_PAM }}
+          repository: COS301-SE-2021/Adventure-IT
+          ref: sprint_Three_MainController
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
