--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
         with: 
           repository: COS301-SE-2021/Adventure-IT
           ref: sprint_Three_MainController
+          token: ${{secrets.ACTIONS_SECRET}}
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
