--- a/backend/microservices/notification-service/pom.xml
+++ b/backend/microservices/notification-service/pom.xml
@@ -50,6 +50,16 @@
             <artifactId>spring-context-support</artifactId>
             <version>5.3.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.3.7</version>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
