--- a/flutter_testing/pubspec.yaml
+++ b/flutter_testing/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   http: ^0.12.0
   json_annotation: ^4.0.0
+  async: any
+  convert: any
   flutter:
     sdk: flutter
 
