--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: checkout development
+        run: git checkout development
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
