--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Backend - Java CI with Maven (TESTING sprint_Three_MainController only)
+name: Backend - Java CI with Maven
 
 on:
   workflow_dispatch:
@@ -14,6 +14,8 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        working-directory: ./backend
-        run: mvn --batch-mode test
+        run: 
+          cd backend
+          mvn --batch-mode test
+          
         
