--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Build with Maven
         working-directory: ./backend
         run: 
-          mvn --batch-mode --update-snapshots verify
+          ./mvnw --batch-mode test
           
         
