--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Build with Maven
         working-directory: ./backend
         run: 
-          ./mvnw --batch-mode test
+          mvn --batch-mode test
           
         
