--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,9 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        working-directory: ./backend
-        run: 
+        run: |
+          cd ./backend
+          chmod +x mvnw
           mvn --batch-mode test
           
         
