--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: |
+          pwd
+          ls
           cd ./backend
           chmod +x mvnw
           mvn --batch-mode test
