--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
+        uses: actions/checkout@v2
         working-directory: Adventure-IT/backend/
         run: |
           chmod +x ./mvnw
