--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         
-        working-directory: Adventure-IT/backend/
+        working-directory: backend/
         run: |
           chmod +x ./mvnw
           ./mvnw --batch-mode test
