--- a/backend/microservices/budget-service/pom.xml
+++ b/backend/microservices/budget-service/pom.xml
@@ -46,6 +46,10 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
