fixes(NotificationServiceTests):working on Notification inTEGRATION Tests

--- a/backend/microservices/notification-service/pom.xml
+++ b/backend/microservices/notification-service/pom.xml
@@ -60,6 +60,12 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
+            <artifactId>user-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 	<build>
