--- a/flutter_testing/pubspec.yaml
+++ b/flutter_testing/pubspec.yaml
@@ -71,6 +71,10 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
+  # This line specifies the image dependency
+  assets:
+    - assets/adventure.PNG
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
