--- a/flutter_testing/pubspec.yaml
+++ b/flutter_testing/pubspec.yaml
@@ -53,7 +53,7 @@ flutter:
 
   # This line specifies the logo dependency
   assets:
-    - assets/adventure.PNG
+    - adventure.PNG
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
