--- a/alex_flutter/adventure_it/pubspec.yaml
+++ b/alex_flutter/adventure_it/pubspec.yaml
@@ -51,6 +51,10 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
+  # The following line specifies the logo dependency
+  assets:
+    - assets/adventure.PNG
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
