--- a/backend/microservices/user-service/src/main/resources/application.yml
+++ b/backend/microservices/user-service/src/main/resources/application.yml
@@ -4,7 +4,19 @@ server:
 spring:
   application:
     name: USER-SERVICE
-
+  datasource:
+    url: http://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/
+    username: postgres
+    password: 310PB!Gq%f&J
+    name: adventureit
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
 eureka:
   client:
     register-with-eureka: true
@@ -13,3 +25,6 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
     instance:
       hostname: localhost
+
+
+
