--- a/backend/microservices/user-service/pom.xml
+++ b/backend/microservices/user-service/pom.xml
@@ -65,8 +65,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.4</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 	<dependencyManagement>
 
 
