--- a/backend/microservices/user-service/src/main/resources/application.yml
+++ b/backend/microservices/user-service/src/main/resources/application.yml
@@ -5,10 +5,9 @@ spring:
   application:
     name: USER-SERVICE
   datasource:
-    url: http://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/
+    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
     username: postgres
     password: 310PB!Gq%f&J
-    name: adventureit
   jpa:
     hibernate:
       ddl-auto: update
