feat: add/remove Itinerary methods

--- a/backend/microservices/itinerary-service/pom.xml
+++ b/backend/microservices/itinerary-service/pom.xml
@@ -59,7 +59,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
+            <artifactId>adventure-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
