--- a/backend/microservices/user-service/pom.xml
+++ b/backend/microservices/user-service/pom.xml
@@ -70,6 +70,10 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
 
     </dependencies>
 	<dependencyManagement>
