feat(main-controller): Implemented KeyCloak JWT authorization

--- a/backend/main-controller/src/main/resources/application.yml
+++ b/backend/main-controller/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: MAIN-CONTROLLER
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/auth/realms/adventure-it
+
+
 
 eureka:
   client:
