--- a/backend/microservices/media-service/src/main/resources/application.yml
+++ b/backend/microservices/media-service/src/main/resources/application.yml
@@ -5,6 +5,20 @@ spring:
   application:
     name: MEDIA-SERVICE
 
+datasource:
+  url: jdbc:postgresql://localhost:5432/postgres
+  username: postgres
+  password: Shivek01
+  name: postgres
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+
 eureka:
   client:
     register-with-eureka: true
