--- a/backend/microservices/budget-service/src/main/resources/application.yml
+++ b/backend/microservices/budget-service/src/main/resources/application.yml
@@ -1,22 +1,22 @@
-#    server.port = 9007
-#        spring.application.name = budget-microservice
-#
-#        spring.jpa.hibernate.ddl-auto=update
-#        spring.jpa.show-sql=false
-#        spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#        spring.jpa.properties.hibernate.format_sql=true
-#        spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#        spring.datasource.username=postgres
-#        spring.datasource.password=Shivek01
-
-
-
 server:
     port: 9007
 
 spring:
     application:
         name: BUDGET-SERVICE
+    datasource:
+        url: jdbc:postgresql://localhost:5432/postgres
+        username: postgres
+        password: Shivek01
+        name: postgres
+    jpa:
+        hibernate:
+            ddl-auto: update
+        show-sql: false
+        properties:
+            hibernate:
+                dialect: org.hibernate.dialect.PostgreSQLDialect
+                format_sql: true
 
 eureka:
     client:
