--- a/backend/microservices/checklist-service/src/main/resources/application.yml
+++ b/backend/microservices/checklist-service/src/main/resources/application.yml
@@ -4,6 +4,19 @@ server:
 spring:
   application:
     name: CHECKLIST-SERVICE
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: Shivek01
+    name: postgres
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
 
 eureka:
   client:
