--- a/backend/microservices/adventure-service/src/main/resources/application.yml
+++ b/backend/microservices/adventure-service/src/main/resources/application.yml
@@ -4,6 +4,18 @@ server:
 spring:
   application:
     name: ADVENTURE-SERVICE
+  datasource:
+    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
+    username: postgres
+    password: 310PB!Gq%f&J
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
 #  jpa:
 #    database: POSTGRESQL
 #    show-sql: true
