--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -24,6 +24,7 @@
         <module>microservices/user-service</module>
         <module>microservices/checklist-service</module>
         <module>microservices/itinerary-service</module>
+        <module>microservices/chat-service</module>
         <module>service-registry</module>
         <module>main-controller</module>
     </modules>
