--- a/backend/microservices/location-service/pom.xml
+++ b/backend/microservices/location-service/pom.xml
@@ -43,6 +43,11 @@
 			<version>2.2.5.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
