fix: AWS postgres credentials added

--- a/backend/microservices/adventure-service/src/main/resources/application.yml
+++ b/backend/microservices/adventure-service/src/main/resources/application.yml
@@ -21,10 +21,10 @@ spring:
 #  spring.jpa.properties.hibernate.format_sql=true
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: http://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/
     username: postgres
-    password: Shivek01
-    name: postgres
+    password: 310PB!Gq%f&J
+    name: adventureit
   jpa:
     hibernate:
       ddl-auto: update
