Microservices updated to throw errors to be caught and shown in front end

--- a/backend/microservices/itinerary-service/src/main/resources/application.yml
+++ b/backend/microservices/itinerary-service/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: 9009
-
+  error:
+    include-message: always
 
   datasource:
     url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
