Revert "Merge branch 'sprint_six_groupchat' into Sprint_Six"
This reverts commit b100e4fcf31ea27f04146d9605314ce6c9accf4e.

--- a/backend/microservices/chat-service/src/main/resources/application.yml
+++ b/backend/microservices/chat-service/src/main/resources/application.yml
@@ -5,9 +5,10 @@ spring:
   application:
     name: CHAT-SERVICE
   datasource:
-    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
-    password: 310PB!Gq%f&J
+    password: Shivek01
+    name: postgres
   jpa:
     hibernate:
       ddl-auto: update
