--- a/backend/microservices/itinerary-service/src/main/resources/application.yml
+++ b/backend/microservices/itinerary-service/src/main/resources/application.yml
@@ -3,19 +3,8 @@ server:
 
 spring:
   application:
-    name: ITINERARY-SERVICE
-  datasource:
-    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
-    username: postgres
-    password: 310PB!Gq%f&J
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+    name: CHECKLIST-SERVICE
+
 eureka:
   client:
     register-with-eureka: true
