feat(main-controller): enabled keycloak authentication on all incoming requests

--- a/backend/main-controller/pom.xml
+++ b/backend/main-controller/pom.xml
@@ -9,7 +9,6 @@
 		<relativePath>../pom.xml</relativePath> <!-- lookup parent locally -->
 	</parent>
 
-	<groupId>com.adventure-it</groupId>
 	<artifactId>main-controller</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>main-controller</name>
@@ -48,6 +47,23 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+			<version>2.2.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
