feat: Added post request for Adventure service from Main controller

--- a/backend/main-controller/pom.xml
+++ b/backend/main-controller/pom.xml
@@ -50,6 +50,12 @@
 		</dependency>
         <dependency>
             <groupId>com.adventure-it</groupId>
+            <artifactId>adventure-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
             <artifactId>user-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
