feat(MainController):finished up main controller notification reroute

--- a/backend/main-controller/pom.xml
+++ b/backend/main-controller/pom.xml
@@ -84,6 +84,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
+            <artifactId>notification-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
