fix(media service): disabled db auto-commit
This allows us to make DB queries that return the @Lob data type

--- a/backend/microservices/media-service/src/main/resources/application.yml
+++ b/backend/microservices/media-service/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
     username: postgres
     password: 310PB!Gq%f&J
+    hikari:
+      auto-commit: false
   jpa:
     hibernate:
       ddl-auto: update
