feat(MainController):added new function to chat

--- a/backend/main-controller/pom.xml
+++ b/backend/main-controller/pom.xml
@@ -90,7 +90,19 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
+            <artifactId>chat-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>com.adventure-it</groupId>
+			<artifactId>chat-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
