fix(CI/CD): maven now cleans & compiles before testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
         working-directory: backend/
         run: |
           chmod +x ./mvnw
+          ./mvnw clean
+          ./mvnw compile
           ./mvnw --batch-mode test
           
         
