--- a/backend/microservices/itinerary-service/src/main/resources/application.yml
+++ b/backend/microservices/itinerary-service/src/main/resources/application.yml
@@ -7,9 +7,11 @@ spring:
   application:
     name: ITINERARY-SERVICE
   datasource:
-    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
+    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit?socketTimeout=5
     username: postgres
     password: 310PB!Gq%f&J
+    hikari:
+      maximum-pool-size: 2
   jpa:
     hibernate:
       ddl-auto: update
