--- a/backend/microservices/media-service/src/main/resources/application.yml
+++ b/backend/microservices/media-service/src/main/resources/application.yml
@@ -5,12 +5,13 @@ server:
 
 spring:
   application:
-    name: MEDIA-SERVICE
+    name: BUDGET-SERVICE
   datasource:
-    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
+    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit?socketTimeout=5
     username: postgres
     password: 310PB!Gq%f&J
     hikari:
+      maximum-pool-size: 2
       auto-commit: false
   jpa:
     hibernate:
