Fixed repeating lines in application.yaml for mediaservice

--- a/backend/keycloak/docker-compose.yml
+++ b/backend/keycloak/docker-compose.yml
@@ -2,14 +2,14 @@ version: "3.3"
 
 services:
   keycloak:
-    image: bitnami/keycloak:latest
+    image: jboss/keycloak
     environment:
       DB_VENDOR: POSTGRES
-      DB_ADDR: 102.133.179.69
+      DB_ADDR: adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com
       DB_DATABASE: adventureit
       DB_USER: postgres
       DB_SCHEMA: keycloak
-      DB_PASSWORD: xy7chRinmA5Fp32fS5Qeqedx
+      DB_PASSWORD: 310PB!Gq%f&J
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: Pa55w0rd
     ports:
