--- a/backend/microservices/notification-service/src/main/resources/application.yml
+++ b/backend/microservices/notification-service/src/main/resources/application.yml
@@ -1,60 +1,25 @@
-#  server.port = 9004
-#    spring.application.name = notification-microservice
-#
-#    spring.datasource.url=jdbc:postgresql://localhost:5000/postgres
-#    spring.datasource.username=postgres
-#    spring.datasource.password=password
-#
-#    spring.mail.host = smtp.gmail.com
-#    spring.mail.port = 587
-#    spring.mail.username = thesmartpointers@gmail.com
-#    spring.mail.password = TSPAAKSS21
-#    spring.mail.properties.mail.smtp.auth=true
-#    spring.mail.properties.mail.smtp.connectiontimeout=5000
-#    spring.mail.properties.mail.smtp.timeout=5000
-#    spring.mail.properties.mail.smtp.writetimeout=5000
-#    spring.mail.properties.mail.smtp.starttls.enable=true
-#
-#    spring.jpa.hibernate.ddl-auto=update
-#    spring.jpa.show-sql=false
-#    spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#    spring.jpa.properties.hibernate.format_sql=true
-
-
-
 server:
-  port: 9004
+  port: ${notification-microservice.port}
   error:
     include-message: always
 
 spring:
   application:
-    name: NOTIFICATION-SERVICE
-  datasource:
-    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit?socketTimeout=5
-    username: postgres
-    password: 310PB!Gq%f&J
-    hikari:
-      maximum-pool-size: 2
+    name: ${notification-microservice.application-name}
+  datasource: ${notification-microservice.datasource}
+  jpa: ${notification-microservice.jpa}
   mail:
-    host: smtp.gmail.com
-    port: 587
-    user: thesmartpointers@gmail.com
-    password: TSPAAKSS21
-    stmp:
-      auth: true
-      connectionTimeout: 5000
-      timeout: 5000
-      writetimeout: 5000
+    host: ${notification-microservice.mail.host}
+    port: ${notification-microservice.mail.port}
+    user: ${notification-microservice.mail.user}
+    password: ${notification-microservice.mail.password}
+    smtp:
+      auth: ${notification-microservice.mail.smtp.auth}
+      connectionTimeout: ${notification-microservice.mail.smtp.connectionTimeout}
+      timeout: ${notification-microservice.mail.smtp.timeout}
+      writetimeout: ${notification-microservice.mail.smtp.writetimeout}
       startttls:
-        enable: true
+        enable: ${notification-microservice.mail.smtp.startttls.enable}
 
+eureka: ${service-registry-client}
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instance:
-      hostname: localhost
