--- a/backend/microservices/budget-service/src/main/resources/application.yml
+++ b/backend/microservices/budget-service/src/main/resources/application.yml
@@ -1,32 +1,12 @@
 server:
-    port: 9007
+    port: ${budget-microservice.port}
     error:
         include-message: always
 
 spring:
     application:
-        name: BUDGET-SERVICE
-    datasource:
-        url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit?socketTimeout=5
-        username: postgres
-        password: 310PB!Gq%f&J
-        hikari:
-            maximum-pool-size: 2
+        name: ${budget-microservice.application-name}
+    datasource: ${budget-microservice.datasource}
+    jpa: ${budget-microservice.jpa}
 
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: false
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.PostgreSQLDialect
-                format_sql: true
-
-eureka:
-    client:
-        register-with-eureka: true
-        fetch-registry: true
-        service-url:
-            defaultZone: http://localhost:8761/eureka/
-        instance:
-            hostname: localhost
+eureka: ${service-registry.client}
