--- a/backend/service-registry/src/main/resources/application.yml
+++ b/backend/service-registry/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8761
+  port: ${service-registry-server.port}
 
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
+spring:
+  name: ${service-registry-server.application-name}
+
+eureka: ${service-registry-server.eureka}
