--- a/backend/microservices/sharing-service/src/main/resources/application.yml
+++ b/backend/microservices/sharing-service/src/main/resources/application.yml
@@ -1,23 +1,13 @@
 server:
-  port: 9003
+  port: ${sharing-microservice.port}
   error:
     include-message: always
 
 spring:
   application:
-    name: SHARING-SERVICE
-  datasource:
-    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit?socketTimeout=5
-    username: postgres
-    password: 310PB!Gq%f&J
-    hikari:
-      maximum-pool-size: 2
+    name: ${sharing-microservice.application-name}
+  datasource: ${sharing-microservice.datasource}
+  jpa: ${sharing-microservice.jpa}
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instance:
-      hostname: localhost
+eureka: ${service-registry-client}
+
