feat: max file size changed to 10MB

--- a/backend/microservices/media-service/src/main/resources/application.yml
+++ b/backend/microservices/media-service/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
     include-message: always
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   application:
     name: BUDGET-SERVICE
   datasource:
